update books isse #3

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
  <!-- Contenido -->
  <section>
 <b>Libros</b>
- <p>(Contenido)</p>
+ <p>El Hobbit es un clásico, que puede ser disfrutado tanto por los pequeños cómo por mayores</p>
 </section>
  <section>
 <b>Películas</b>
