--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,11 +15,11 @@
  <!-- Contenido -->
  <section>
 <b>Libros</b>
- <p>(Contenido)</p>
+ <p>Me he equivocado</p>
 </section>
  <section>
 <b>Películas</b>
- <p>(Contenido)</p>
+ <p>El Hobbit es una serie de peliculas. No obstante, es una pobre adaptación, me explico. Es una castaña</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
